added layouts for questions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,78 @@
     <string name="xanthine_checkbox_text">Ксантин</string>
     <string name="dihydroxyadenine_checkbox_text">2,8-дигидроксиаденин</string>
     <string name="medicinal_stones_checkbox_text">Лекарственные камни</string>
+    <string name="location_stone">Локализация камня</string>
+    <string name="localization_stone_unknown_checkbox_text">Локализация неизвестна</string>
+    <string name="lms_text">Лоханочно-мочеточниковый сегмент</string>
+    <string name="possibility_and_way_of_visualizing_a_stone_text">Возможность и способ визуализации камня</string>
+    <string name="non_visualizing_checkbox_text">Не визуализируются</string>
+    <string name="located_during_ultrasound_checkbox_text">Лоцируется при УЗИ</string>
+    <string name="radiopaque_checkbox_text">Рентгеноконтрастный</string>
+    <string name="x_ray_negative_checkbox_text">Рентгенонегативный визуализация по концу контраста</string>
+    <string name="size_stone_text_title">Размер камня</string>
+    <string name="shape_stone_text_title">Форма камня</string>
+    <string name="smooth_oval_or_round_checkbox_text">Гладкий, овальный или округлый</string>
+    <string name="irregular_prickly_checkbox_text">Неправильной формы, шиповатый</string>
+    <string name="density_stone_text_title">Плотность камня по результатам СКТ (хаунсфилд)</string>
+    <string name="x_ray_intensity_text_title">Рентгенинтенсивность камня по результатам урографии</string>
+    <string name="non_contrast_checkbox_text">Неконтрастный</string>
+    <string name="low_contrast_checkbox_text">Слабоконтрастный</string>
+    <string name="contrasting_checkbox_text">Контрастный</string>
+    <string name="intensely_contrasting_checkbox_text">Интенсивно контрастный</string>
+    <string name="clarity_of_contours_stone_text_title">Четкость контуров</string>
+    <string name="fuzzy_blurry_checkbox_text">Нечеткие, размытые</string>
+    <string name="clear_even_checkbox_text">Четкие, ровные</string>
+    <string name="having_enlightenment_stone_text_title">Наличие просветлений</string>
+    <string name="standing_duration_stone_text_title">Длительность стояния конкремента в мочеточнике</string>
+    <string name="chemical_structure_stone_text_title">Химическая структура камня (в анамнезе)</string>
+    <string name="monohydrate_oxalate_checkbox_text">Моногидратный оксалат</string>
+    <string name="unknown_checkbox_text">Неизвестно</string>
+    <string name="phosphate_checkbox_text">Фосфат</string>
+    <string name="dihydrate_oxalate_checkbox_text">Дигидрат оксалат</string>
+    <string name="urate_checkbox_text">Урат</string>
+    <string name="mixed_checkbox_text">Смешанный</string>
+    <string name="renal_parenchyma_thickness_text">Толщина парензимы почки</string>
+    <string name="contractile_ability_ureter_text_title">Сократительная способность мочеточника по данным экскреторной урографии</string>
+    <string name="ureter_is_not_dilated_checkbox_text">Мочеточник не расширен / расширен до 10мм</string>
+    <string name="ureter_dilated_more_ten_checkbox_text">Мочеточник расширен 10-15мм</string>
+    <string name="ureter_dilated_more_fifteen_checkbox_text">Мочеточник расширен более 15мм, извитой</string>
+    <string name="cicatrical_periureterit_text_title">Стриктура нижележающего отдела мочеточника, рубцовый периуретерит</string>
+    <string name="first_cicatrical_checkbox_text">Сужение просвета мочеточника на экскреторных урограммах без выраженного супрастенотического расширения</string>
+    <string name="second_cicatrical_checkbox_text">Протяженное до 1см сужение с диаметром мочеточника 1-2мм с супрастенотическим расширением</string>
+    <string name="third_cicatrical_checkbox_text">Протяженное более 1см сужение с диаметром мочеточника 1-2мм с супрастенотическим расширением</string>
+    <string name="fourth_cicatrical_checkbox_text">Протяженное более 1см сужение с диаметром мочеточника менее 1мм с супрастенотическим расширением</string>
+    <string name="fifth_cicatrical_checkbox_text">Протяженное менее 1см сужение с диаметром менее 1мм с супрастенотическим расширением</string>
+    <string name="fixed_kick_text_title">Фиксированный С-образный перегиб мочеточника ниже камня, в градусах</string>
+    <string name="fixed_kink_text_title">S-образный перегиб мочеточтика ниже камня</string>
+    <string name="no_radio_button">Нет</string>
+    <string name="yes_radio_button">Есть</string>
+    <string name="multiple_obstruction_text_title">Нижелажащий камень мочеточника (множественная обструкция)</string>
+    <string name="ureterocele_text_title">Уретероцеле</string>
+    <string name="bph_text_title">Аденома простаты с субтригональным ростом с девиацией нижних отделов мочеточника</string>
+    <string name="cystocele_text_title">Цистоцеле</string>
+    <string name="ureteral_compression_text_title">Компрессия мочеточника извне фибромиомой матки, объемными образованиями</string>
+    <string name="angiomyolipoma_kidney_text_title">Ангиомиолипома почки</string>
+    <string name="malignant_tumor_text_title">Злокачественная опухоль различных органов и тканей в проекции камня</string>
+    <string name="degree_subcutaneous_fat_text_title">степень развития подкожно-жировой клетчатки</string>
+    <string name="degree_subcutaneous_fat_one_radio_button_text">Обычного питания или оэирение 1ст.</string>
+    <string name="degree_subcutaneous_fat_two_radio_button_text">Ожирение 2ст.</string>
+    <string name="degree_subcutaneous_fat_three_radio_button_text">Ожирение 3ст.</string>
+    <string name="degree_subcutaneous_fat_four_radio_button_text">Ожирение 4ст.</string>
+    <string name="availability_of_drainage_text_title">Наличие дренажа</string>
+    <string name="catheter_radio_button">Катетер</string>
+    <string name="chpns_radio_button">ЧПНС</string>
+    <string name="stent_radio_button">Стент</string>
+    <string name="aneurysm_text_title">Наличие аортальных и/или почечных аневризм</string>
+    <string name="coagulation_disorders_text_title">Нарушения свертывающей системы крови</string>
+    <string name="pregnancy_text_title">Беременность</string>
+    <string name="general_somatic_status_text_title">Общесоматический статус больного, степень анестезиологического риска ASA</string>
+    <string name="asa_one_radio_button">ASA 1</string>
+    <string name="asa_two_radio_button">ASA 2</string>
+    <string name="asa_three_radio_button">ASA 3</string>
+    <string name="asa_four_radio_button">ASA 4</string>
+    <string name="asa_five_radio_button">ASA 5</string>
+    <string name="serous_pyelonephritis_text_title">Серозный пиелонефрит</string>
+    <string name="purulent_pyelonephritis_text_title">Гнойный пиелонефрит</string>
+    <string name="renal_colic_text_title">Часто рецидивирующая почечная колика, необходимость вводить инъекционные анальгетики более 4 раз в сутки</string>
+    <string name="lack_of_effect_therapy_text_title">Отсутствие эффекта от камнеизгоняющей терапии в течение 2 недель</string>
 </resources>
